--- a/.github/workflows/build-pre-release.yaml
+++ b/.github/workflows/build-pre-release.yaml
@@ -22,7 +22,10 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: 1.19
-
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=today::$(date +'%Y%m%d%H%M')"
+        shell: bash
       - uses: actions/cache@v3
         with:
           path: |
@@ -56,13 +59,13 @@ jobs:
         uses: andreaswilli/delete-release-assets-action@v2.0.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          tag: Prerelease-alpha
+          tag: Pre-${{ steps.date.outputs.today }}
           deleteOnlyFromDrafts: false
 
       - name: Tag Repo
         uses: richardsimko/update-tag@v1
         with:
-          tag_name: Prerelease-alpha
+          tag_name: Pre-${{ steps.date.outputs.today }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -71,7 +74,7 @@ jobs:
         if: ${{  success() }}
         with:
           tag: ${{ github.ref_name }}
-          tag_name: Prerelease-alpha
+          tag_name: Pre-${{ steps.date.outputs.today }}
           files: app/build/outputs/apk/meta-alpha/release/*
           prerelease: true
           generate_release_notes: true
